# Rust

./: .env  .env2  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile2  Generated File July 18, 2025 - 8_32AM.x-python.txt  Generated File July 18, 2025 - 8_34AM.x-python (1).txt  Generated File July 18, 2025 - 8_34AM.x-python (2).txt  Generated File July 18, 2025 - 8_34AM.x-python (3).txt  Generated File July 18, 2025 - 8_34AM.x-python (4).txt  Generated File July 18, 2025 - 8_34AM.x-python (5).txt  Generated File July 18, 2025 - 8_34AM.x-python (6).txt  Generated File July 18, 2025 - 8_34AM.x-python (7).txt  Generated File July 18, 2025 - 8_34AM.x-python (8).txt  Generated File July 18, 2025 - 8_34AM.x-python.txt  Generated File July 18, 2025 - 9_24AM (1).json  Generated File July 18, 2025 - 9_24AM.json  Generated File July 18, 2025 - 9_26AM.octet-stream.txt  Generated File July 18, 2025 - 9_55AM (1).json  Generated File July 18, 2025 - 9_55AM (2).json  Generated File July 18, 2025 - 9_55AM.json  IMPLEMENTATION_SUMMARY.md  README.md  README2.md  advanced_agent.py  advanced_agents.py  async_llm_agent.py  auth.py  auto_scaler.py  celery_worker.py  client_demo.py  code (10).py  code (10).txt  code (11).py  code (11).txt  code (12).py  code (12).txt  (+51 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  ci-cd.yml2  ci.yml  docs.yml
ReasoningAgent/: Cargo.toml
ReasoningAgent/src/: lib.rs
agent/: core.py  interfaces.py  logging_config.py  metrics.py  plugin_loader.py  prompt_builder.py
agent/plugins/: kg_sqlalchemy.py  llm_openai.py  mock_llm.py  vector_chroma.py
agent_api/: main.py
agents/: metrics.py  processor.py  registry.py  scheduler.py  supervisor.py  task_queue.py
api/: auth.py  grpc_server.py  main.py  orchestrator_api.py  rest.py  schemas.py  worker.py
app/: config.py  main.py
app/api/: agents.py  orchestrator.py  orgs.py  tasks.py  users.py
app/models/: agent.py  audit_log.py  organization.py  task.py  (+3 more)
autonomous_architect/: README.md  __init__.py  api.py  cli.py  codebase_graph.py  config.py  db.py  events.py  monitoring.py  orchestrator.py  utils.py
dashboard/: index.html  package.json  vite.config.js
db/: models.py  session.py
docs/: AGENTS.md  ASYNC_DISTRIBUTED.md  COLLABORATION.md  EXTENDING.md  ORCHESTRATION.md  VECTOR_STORE.md  api.md  architecture.md  contributing.md  development.md  index.md  plugin_reference.md  plugins.md  reference.md
examples/: basic_usage.rs  rest_server.rs  with_real_apis.rs
k8s/: README.md  api-deployment.yaml  auto-scaler-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  elasticsearch-deployment.yaml  neo4j-deployment.yaml  node-deployment.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  postgres-deployment.yaml  prometheus-deployment.yaml  redis-deployment.yaml  services.yaml
kg/: sqlite_kg.py
kg_api/: README.md  main.py
llm_plugins/: __init__.py  base.py  huggingface.py  openai.py
multi_agent_framework/: Dockerfile  README.md  config.py  docker-compose.yml  message_format.py  orchestrator.py  requirements.txt
plugins/: dynamic_loader.py  normalizer_plugin.py  plugin_manager.py  sentiment_analyzer_plugin.py  tokenizer_plugin.py  vectorizer_plugin.py
protos/: agent.proto
refactored_code/: config.yaml  main.py
rust/: Cargo.toml
rust/config/: default.toml
rust/src/: lib.rs  main.rs
rust/src/agent/: config.rs  core.rs  mod.rs  prompt.rs
rust/src/api/: handlers.rs  models.rs
rust/src/cli/: commands.rs
rust/src/metrics/: collector.rs  exporters.rs  mod.rs
rust/src/plugins/: manager.rs  mod.rs  traits.rs
rust/src/plugins/llm/: huggingface.rs  mock.rs  mod.rs  openai.rs
rust/src/plugins/prompt/: default.rs  enhanced.rs  mod.rs
rust/src/storage/: memory.rs  mod.rs  persistent.rs  vector_store.rs
rust/src/utils/: error.rs  mod.rs
rust/tests/: agent.rs  integration.rs
scripts/: seed_sample_data.py
src/: knowledge_graph.rs  lib.rs  main.rs  metrics.rs  plugins.rs  types.rs  vector_store.rs
storage/: base.py  file_storage.py  vector_db_storage.py
tests/: test_agent.py  test_api.py  test_orchestrator.py  test_plugins.py  test_retry.py  test_vector_store.py
ui/: dashboard.py  distributed_dashboard.py
utils/: circuit_breaker.py  heartbeat.py  logging.py  retry.py
vector_store/: chroma_store.py
webui/: streamlit_app.py
webui-react/: index.html  package.json
(+107 files in other folders)
