[package]
name = "reasoning-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"], optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
llm-apis = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_real_apis"
path = "examples/with_real_apis.rs"

[[example]]
name = "rest_server"
path = "examples/rest_server.rs"