[package]
name = "ReasoningAgent"
version = "0.1.0"
edition = "2021"

[lib]
name = "reasoning_agent"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }

[package.metadata.maturin]
name = "reasoning_agent"
